<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rathin.testing.tabbed_activity"
    android:padding="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ddbtext"
                android:id="@+id/imageView2"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/curved_linear"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="40dp"
                    android:background="@android:color/background_light">

                    <TextView
                        android:text="Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvEmail"
                        android:textSize="25sp" />

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/actvEmail"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:hint="@string/email_hint"
                        android:textColorLink="?attr/colorPrimary" />

                    <TextView
                        android:text="Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvPassword"
                        android:textSize="25sp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/etPassword"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:hint="@string/password_hint"
                        android:textColorLink="?attr/colorPrimary" />

                    <TextView
                        android:text="Forgot Password?"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvForgot"
                        android:textAlignment="textEnd"
                        android:layout_marginEnd="10dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp">

                        <Button
                            android:text="@string/action_sign_in_short"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btSignIn"
                            android:background="@drawable/curved_linear"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:textColor="@android:color/white"
                            android:onClick="redirect" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>
