<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.rathin.testing.tabbed_activity"
    android:orientation="vertical">


    <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
        android:layout_margin="5dp"
        android:id="@+id/linearLayout">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">


            <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ddbtext"
            android:id="@+id/ivLogo"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_linear"
                android:gravity="center"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@android:color/background_light">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp">

                                <TextView
                                    android:text="Name"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/tvName"
                                    android:textSize="20sp"
                                    android:layout_width="100dp" />

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPersonName"
                                    android:id="@+id/etName"
                                    android:layout_weight="0.43"
                                    android:ems="8"
                                    android:hint="@string/name_hint"
                                    android:scrollbars="horizontal" />

                            </LinearLayout>
                        </TableRow>

                        <TableRow android:layout_width="match_parent"
                            android:background="@android:color/darker_gray"></TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingTop="40dp"
                                android:background="@android:color/background_light"
                                android:padding="0dp"
                                android:layout_margin="10dp">

                                <TextView
                                    android:text="Email"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/tvEmail"
                                    android:textSize="20sp" />

                                <AutoCompleteTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/etEmail"
                                    android:hint="@string/email_hint"
                                    android:textColorLink="?attr/colorPrimary"
                                    android:ems="10" />

                            </LinearLayout>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp">

                                <TextView
                                    android:text="Password"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/tvPassword"
                                    android:textSize="20sp" />

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"
                                    android:ems="8"
                                    android:id="@+id/etPassword"
                                    android:hint="@string/password_hint"
                                    android:textColorLink="?attr/colorPrimary" />

                            </LinearLayout>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:text="Confirm Password"
                                    android:layout_width="100dp"
                                    android:id="@+id/tvPasswordConfirm"
                                    android:textSize="20sp"
                                    android:layout_height="60dp"
                                    android:layout_marginTop="0dp"
                                    android:layout_gravity="center"/>

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"
                                    android:ems="10"
                                    android:id="@+id/etPasswordConfirm"
                                    android:hint="@string/password_hint"
                                    android:textColorLink="?attr/colorPrimary" />

                            </LinearLayout>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:text="Mobile No."
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/tvMobile"
                                    android:textSize="20sp" />

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="number"
                                    android:ems="10"
                                    android:id="@+id/etMobile"
                                    android:hint="@string/mobile_hint" />

                            </LinearLayout>
                        </TableRow>

                    </TableLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp">

                        <Button
                            android:text="Register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btRegister"
                            android:background="@drawable/curved_linear"
                            android:textColor="#ffff" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />




</RelativeLayout>



